# data-science-portfolio

./: .gitignore  Makefile  README.md  book recommender.avif  friends tv .avif  index.html  movie recommender .avif  pyproject.toml  rwanda co2.avif
index_files/: css  photo-1564608938148-e3c5325907ee  photo-1584905066893-7d5c142ba4e1  photo-1593306984293-c961c4c0feb8  photo-1616530940355-351fabd9524b  rathis-marvelous-site.webflow.a37adb4b3.css  webflow.492faa54f.js
portfolio/: __init__.py
portfolio/books-recommender/: app.py  books-recomender.ipynb  books.csv
portfolio/friends-eda/: friends-eda.ipynb
portfolio/movie-recommender/: app.py  movie-recommender.ipynb
portfolio/rwanda-co2-prediction/: predicted_values_with_emission.csv  rwanda-co2-prediction.ipynb
portfolio/trip_advisor/: scrape_trip_advisor.ipynb
