[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Priya <rathibala96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
seaborn = "^0.13.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
