[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Priya <rathibala96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
seaborn = "^0.13.1"
scikit-learn = "^1.3.2"
streamlit = "^1.29.0"
nltk = "^3.8.1"
wordcloud = "^1.9.3"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
isort = "^5.13.2"
black = {version = "^23.12.1", extras = ["jupyter"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
